# snake-game

./: CHANGELOG.md  CHANGELOG.org  LICENSE  README.org  shell.nix  snake.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Game.hs  Render.hs
src/Game/: Flow.hs  Input.hs  Settings.hs  Types.hs  Utils.hs
