cabal-version:      3.0
name:               snake
version:            0.2.0.0

synopsis:           A simple and classical snake game, but in Haskell.

license:            MIT

license-file:       LICENSE
author:             JJoaoll
maintainer:         joaoduos@gmail.com
category:           Game
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable my-snake-game
    import:           warnings
    main-is:          Main.hs
    other-modules:    Game
                     ,Game.Flow
                     ,Game.Input
                     ,Game.Settings
                     ,Game.Types
                     ,Game.Utils
                     ,Render
    build-depends:    base
                     ,OpenGL
                     ,gloss
                     ,random

    hs-source-dirs:   app, src
    default-language: GHC2021
